--- a/core/globals.css
+++ b/core/globals.css
@@ -3,19 +3,22 @@
 @tailwind utilities;
 
 :root {
-  --primary: 96 100% 68%;
-  --accent: 96 100% 88%;
+  --primary: 84 100% 37%;
+  --accent: 84 100% 57%;
   --background: 0 0% 100%;
-  --foreground: 0 0% 7%;
-  --success: 116 78% 65%;
-  --error: 0 100% 60%;
+  --foreground: 0 0% 27%;
+  --success: 84 100% 37%;
+  --error: 0 100% 42%;
   --warning: 40 100% 60%;
-  --info: 220 70% 45%;
-  --contrast-100: 0 0% 93%;
-  --contrast-200: 0 0% 82%;
+  --info: 200 100% 32%;
+  --contrast-100: 0 0% 92%;
+  --contrast-200: 0 0% 80%;
   --contrast-300: 0 0% 70%;
   --contrast-400: 0 0% 54%;
-  --contrast-500: 0 0% 34%;
+  --contrast-500: 0 0% 27%;
+  --font-family-body: var(--font-family-nunito-sans, sans-serif);
+  --font-family-heading: var(--font-family-nunito, sans-serif);
+  --font-family-mono: var(--font-family-roboto-mono, monospace);
   --font-variation-settings-body: 'slnt' 0;
   --font-variation-settings-heading: 'slnt' 0;
   --font-size-xs: 0.75rem;
